k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vuejs
  labels:
    app.kubernetes.io/name: vuejs-template
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
