k8s/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vuejs-template
  namespace: vuejs
  labels:
    app.kubernetes.io/name: vuejs-template
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vuejs-template
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
